# hgettext

./: .travis.yml  CHANGELOG.md  LICENSE  cabal.haskell-ci  hgettext.cabal
.github/workflows/: haskell-ci.yml
src/: Internal.hs  hgettext.hs
src-exe/: hgettext.hs
src/Distribution/Simple/I18N/: GetText.hs
src/Text/I18N/: GetText.hs
