cabal-version:       1.14
name:                hgettext
version:             0.1.30
build-type:          Simple

license:             BSD3
license-file:        LICENSE

author:              Vasyl Pasternak
maintainer:          Herbert Valerio Riedel
copyright:           2009 Vasyl Pasternak
category:            Text
bug-reports:         https://github.com/hvr/hgettext/issues
synopsis:            Bindings to libintl.h (gettext, bindtextdomain)
description:         This package provides bindings to the @gettext@ internationalization and localization (i18n) library

source-repository head
  type:              git
  location:          https://github.com/hvr/hgettext.git

library
  default-language:  Haskell2010
  exposed-modules:   Text.I18N.GetText,
                     Distribution.Simple.I18N.GetText

  hs-source-dirs:    src
  build-depends:     base             >=4.5    && <4.11
                   , process          >=1.1    && <1.7
                   , directory        >=1.1    && <1.4
                   , filepath         >=1.3    && <1.5
                   , containers       >=0.4.2  && <0.6
                   , Cabal            >=1.14   && <1.25
                   , setlocale        >=0.0.3  && <1.1

executable hgettext
  default-language:  Haskell2010

  main-is:           hgettext.hs
  other-modules:     Paths_hgettext

  hs-source-dirs:    src-exe

  build-depends:     hgettext
                   , Cabal
                   , base
                   , filepath

  build-depends:     uniplate         >=1.6.12 && <1.7
                   , haskell-src-exts >=1.18   && <1.21
