cabal-version:       1.14
name:                hgettext
version:             0.1.30
build-type:          Simple

license:             BSD3
license-file:        LICENSE

author:              Vasyl Pasternak
maintainer:          Herbert Valerio Riedel
copyright:           2009 Vasyl Pasternak
category:            Text
bug-reports:         https://github.com/hvr/hgettext/issues
synopsis:            Bindings to libintl.h (gettext, bindtextdomain)
description:         This package provides bindings to the @gettext@ internationalization and localization (i18n) library.
                     .
                     This package provides support for custom @Setup.hs@ scripts via the "Distribution.Simple.I18N.GetText" module.
                     .
                     A user-contributed tutorial can be found in the [Haskell Wiki](https://wiki.haskell.org/Internationalization_of_Haskell_programs_using_gettext).

tested-with: GHC==8.2.2, GHC==8.0.2, GHC==7.10.3, GHC==7.8.4, GHC==7.6.3, GHC==7.4.2

source-repository head
  type:              git
  location:          https://github.com/hvr/hgettext.git

library
  default-language:  Haskell2010
  exposed-modules:   Text.I18N.GetText,
                     Distribution.Simple.I18N.GetText

  hs-source-dirs:    src
  build-depends:     base             >=4.5    && <4.11
                   , process          >=1.1    && <1.7
                   , directory        >=1.1    && <1.4
                   , filepath         >=1.3    && <1.5
                   , containers       >=0.4.2  && <0.6
                   , Cabal            >=1.14   && <1.25
                   , setlocale        >=0.0.3  && <1.1

  ghc-options:       -Wall

executable hgettext
  default-language:  Haskell2010

  main-is:           hgettext.hs
  other-modules:     Paths_hgettext

  hs-source-dirs:    src-exe

  build-depends:     hgettext
                   , Cabal
                   , base
                   , filepath

  build-depends:     uniplate         >=1.6.12 && <1.7
                   , haskell-src-exts >=1.18   && <1.21

  ghc-options:       -Wall
